compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__bit_strings_float.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
assertion_line: 21
expression: "pub fn main() {\n  let b = 16\n  let floats = <<1.0:16-float, 5.0:float-32, 6.0:float-64-little, 1.0:float-size(b)>>\n  let <<1.0:16-float, 5.0:float-32, 6.0:float-64-little, 1.0:float-size(b)>> = floats \n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars]).

-export([main/0]).

-spec main() -> bitstring().
main() ->
    B = 16,
    Floats = <<1.0:16/float,
        5.0:32/float,
        6.0:64/float-little,
        1.0:(lists:max([(B), 0]))/float>>,
    <<1.0:16/float, 5.0:32/float, 6.0:64/float-little, 1.0:B/float>> = Floats.

