compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__block_in_pattern_size.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main() {\n  let assert <<len, payload:size({ len - 1 } * 8)>> = <<>>\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let assert <<len, payload:size({ len - 1 } * 8)>> = <<>>
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> bitstring().
main() ->
    case <<>> of
        <<Len, Payload:((Len - 1) * 8)>> = _value ->
            _value;

        _value@1 ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 3,
                value => _value@1,
                start => 19,
                'end' => 75,
                pattern_start => 30,
                pattern_end => 68
            })
    end.
