compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__discard_utf8_pattern.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main() {\n    let assert <<_:utf8, rest:bits>> = <<>>\n}"
---
----- SOURCE CODE

pub fn main() {
    let assert <<_:utf8, rest:bits>> = <<>>
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> bitstring().
main() ->
    case <<>> of
        <<_/utf8, Rest/bitstring>> = _value ->
            _value;

        _value@1 ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 3,
                value => _value@1,
                start => 21,
                'end' => 60,
                pattern_start => 32,
                pattern_end => 53
            })
    end.
