compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__literal_utf16_big_string.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn go() {\n  <<\"wibble\":utf16-big>>\n}\n"
---
----- SOURCE CODE

pub fn go() {
  <<"wibble":utf16-big>>
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec go() -> bitstring().
go() ->
    <<"wibble"/utf16-big>>.
